--- a/files/style.css
+++ b/files/style.css
@@ -554,8 +554,8 @@ body {
     cursor: pointer;
     padding: 0px;
     overflow: hidden;
-    width: 200px;
-    height: 150px; 
+    /* width: 200px; */
+    height: 300px; 
 }
 
 .row img {
